datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["omitApi"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

generator zod {
  provider = "zod-prisma-types"
  output   = "./zod-prisma-types"
}

model Game {
  id String @id @default(cuid())

  slug        String   @unique
  name        String
  price       Decimal  @db.Money
  description String?  @db.VarChar(1000)
  releaseDate DateTime
  rating      Float

  image       Image?

  developers Developer[]
  publishers Publisher[]
  platforms  Platform[]
  genres     Genre[]
  tags       Tag[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Developer {
  id    String @id @default(cuid())
  slug  String @unique
  name  String 
  games Game[]
}

model Publisher {
  id    String @id @default(cuid())
  slug  String @unique
  name  String
  games Game[]
}

model Platform {
  id    String @id @default(cuid())
  slug  String @unique
  name  String
  games Game[]
}

model Genre {
  id    String @id @default(cuid())
  slug  String @unique
  name  String
  games Game[]
}

model Tag {
  id    String @id @default(cuid())
  slug  String @unique
  name  String
  games Game[]
}

model Image {
  id        String   @id @default(cuid())
  url       String   @db.VarChar(255)
  game      Game     @relation(fields: [gameId], references: [id])
  gameId    String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
