//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Game {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  price Decimal [not null]
  description String
  releaseDate DateTime [not null]
  rating Float [not null]
  image Image
  developers Developer [not null]
  publishers Publisher [not null]
  platforms Platform [not null]
  genres Genre [not null]
  tags Tag [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Developer {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  games Game [not null]
}

Table Publisher {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  games Game [not null]
}

Table Platform {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  games Game [not null]
}

Table Genre {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  games Game [not null]
}

Table Tag {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  games Game [not null]
}

Table Image {
  id String [pk]
  url String [not null]
  game Game [not null]
  gameId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table DeveloperToGame {
  developersId String [ref: > Developer.id]
  gamesId String [ref: > Game.id]
}

Table GameToPublisher {
  publishersId String [ref: > Publisher.id]
  gamesId String [ref: > Game.id]
}

Table GameToPlatform {
  platformsId String [ref: > Platform.id]
  gamesId String [ref: > Game.id]
}

Table GameToGenre {
  genresId String [ref: > Genre.id]
  gamesId String [ref: > Game.id]
}

Table GameToTag {
  tagsId String [ref: > Tag.id]
  gamesId String [ref: > Game.id]
}

Ref: Image.gameId - Game.id